--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <script src="https://kit.fontawesome.com/4189113ded.js" crossorigin="anonymous"></script>
   <title>Corollo</title>
 </head>
 
@@ -37,6 +38,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+      
     -->
 </body>
 
